# tweet-audit-impl

./: LICENCE  README.md
.github/workflows/: go.yml  java.yml  python.yml
go/: .gitignore  .golangci.yml  README.md  TRADEOFFS.md  config.example.json  config.json  go.mod  go.sum
go/cmd/tweet-audit/: main.go  main_test.go
go/cmd/tweet-audit/commands/: commands.go  commands_test.go
go/internal/analyzer/: gemini.go  gemini_test.go
go/internal/app/: app.go  app_test.go
go/internal/config/: settings.go  settings_test.go
go/internal/models/: models.go
go/internal/storage/: checkpoint.go  checkpoint_test.go  parser.go  parser_test.go  writer.go  writer_test.go
java/: .gitignore  README.md  TRADEOFFS.md  checkstyle.xml  pom.xml
java/src/main/java/com/benx421/tweetaudit/: Main.java
java/src/main/java/com/benx421/tweetaudit/analyzer/: AnalyzerException.java  GeminiAnalyzer.java  GeminiClient.java  GeminiSdkClient.java  RateLimiter.java  RetryPolicy.java  TweetAnalyzer.java
java/src/main/java/com/benx421/tweetaudit/application/: Application.java
java/src/main/java/com/benx421/tweetaudit/config/: ConfigLoader.java  Criteria.java  Settings.java
java/src/main/java/com/benx421/tweetaudit/models/: Result.java  (+3 more)
java/src/test/java/com/benx421/tweetaudit/: MainTest.java
python/: .gitignore  README.md  TRADEOFFS.md  pyproject.toml
python/src/: analyzer.py  application.py  config.py  main.py  models.py  storage.py
python/tests/: conftest.py  test_analyzer.py  test_application.py  test_config.py  test_main.py  test_storage.py
python/tests/testdata/: invalid.json  tweets.csv  tweets.json
(+12 files in other folders)
